attached_assets/Pasted--npm-run-test-nodejs-1-0-0-test-jest-FAIL-tests-api-test-js-Test-suite-failed-to-run--1739532474005.txt
 npm run test

> nodejs@1.0.0 test
> jest

 FAIL  tests/api.test.js
  â— Test suite failed to run

    SyntaxError: /home/runner/workspace/BD6.4_HW_3/tests/api.test.js: Unexpected token, expected "," (40:76)

      38 | //  6: Test Get All Articles with No Articles
      39 |
    > 40 |     it("GET API /articles should return 404 if no articles found", aysnc () => {
         |                                                                             ^
      41 |         getAllArticles.mockReturnValue([]);
      42 |
      43 |         let response = await request(server).get("/articles");

      at constructor (../node_modules/@babel/parser/src/parse-error.ts:95:45)
      at Parser.toParseError [as raise] (../node_modules/@babel/parser/src/tokenizer/index.ts:1497:19)
      at Parser.raise [as unexpected] (../node_modules/@babel/parser/src/tokenizer/index.ts:1537:16)
      at Parser.unexpected [as expect] (../node_modules/@babel/parser/src/parser/util.ts:157:12)
      at Parser.expect [as parseCallExpressionArguments] (../node_modules/@babel/parser/src/parser/expression.ts:999:14)
      at Parser.parseCallExpressionArguments [as parseCoverCallAndAsyncArrowHead] (../node_modules/@babel/parser/src/parser/expression.ts:888:29)
      at Parser.parseCoverCallAndAsyncArrowHead [as parseSubscript] (../node_modules/@babel/parser/src/parser/expression.ts:777:19)
      at Parser.parseSubscript [as parseSubscripts] (../node_modules/@babel/parser/src/parser/expression.ts:735:19)
      at Parser.parseSubscripts [as parseExprSubscripts] (../node_modules/@babel/parser/src/parser/expression.ts:720:17)
      at Parser.parseExprSubscripts [as parseUpdate] (../node_modules/@babel/parser/src/parser/expression.ts:693:21)
      at Parser.parseUpdate [as parseMaybeUnary] (../node_modules/@babel/parser/src/parser/expression.ts:655:23)
      at Parser.parseMaybeUnary [as parseMaybeUnaryOrPrivate] (../node_modules/@babel/parser/src/parser/expression.ts:389:14)
      at Parser.parseMaybeUnaryOrPrivate [as parseExprOps] (../node_modules/@babel/parser/src/parser/expression.ts:401:23)
      at Parser.parseExprOps [as parseMaybeConditional] (../node_modules/@babel/parser/src/parser/expression.ts:356:23)
      at Parser.parseMaybeConditional [as parseMaybeAssign] (../node_modules/@babel/parser/src/parser/expression.ts:298:21)
      at Parser.parseMaybeAssign [as parseExpressionBase] (../node_modules/@babel/parser/src/parser/expression.ts:221:23)
      at parseExpressionBase (../node_modules/@babel/parser/src/parser/expression.ts:212:39)
      at Parser.callback [as allowInAnd] (../node_modules/@babel/parser/src/parser/expression.ts:3112:16)
      at Parser.allowInAnd [as parseExpression] (../node_modules/@babel/parser/src/parser/expression.ts:212:17)
      at Parser.parseExpression [as parseStatementContent] (../node_modules/@babel/parser/src/parser/statement.ts:659:23)
      at Parser.parseStatementContent [as parseStatementLike] (../node_modules/@babel/parser/src/parser/statement.ts:437:17)
      at Parser.parseStatementLike [as parseStatementListItem] (../node_modules/@babel/parser/src/parser/statement.ts:386:17)
      at Parser.parseStatementListItem [as parseBlockOrModuleBlockBody] (../node_modules/@babel/parser/src/parser/statement.ts:1420:16)
      at Parser.parseBlockOrModuleBlockBody [as parseBlockBody] (../node_modules/@babel/parser/src/parser/statement.ts:1393:10)
      at Parser.parseBlockBody [as parseBlock] (../node_modules/@babel/parser/src/parser/statement.ts:1361:10)
      at Parser.parseBlock [as parseFunctionBody] (../node_modules/@babel/parser/src/parser/expression.ts:2557:24)
      at Parser.parseFunctionBody [as parseArrowExpression] (../node_modules/@babel/parser/src/parser/expression.ts:2498:10)
      at Parser.parseArrowExpression [as parseParenAndDistinguishExpression] (../node_modules/@babel/parser/src/parser/expression.ts:1794:12)
      at Parser.parseParenAndDistinguishExpression [as parseExprAtom] (../node_modules/@babel/parser/src/parser/expression.ts:1131:21)
      at Parser.parseExprAtom [as parseExprSubscripts] (../node_modules/@babel/parser/src/parser/expression.ts:714:23)
      at Parser.parseExprSubscripts [as parseUpdate] (../node_modules/@babel/parser/src/parser/expression.ts:693:21)
      at Parser.parseUpdate [as parseMaybeUnary] (../node_modules/@babel/parser/src/parser/expression.ts:655:23)
      at Parser.parseMaybeUnary [as parseMaybeUnaryOrPrivate] (../node_modules/@babel/parser/src/parser/expression.ts:389:14)
      at Parser.parseMaybeUnaryOrPrivate [as parseExprOps] (../node_modules/@babel/parser/src/parser/expression.ts:401:23)
      at Parser.parseExprOps [as parseMaybeConditional] (../node_modules/@babel/parser/src/parser/expression.ts:356:23)
      at Parser.parseMaybeConditional [as parseMaybeAssign] (../node_modules/@babel/parser/src/parser/expression.ts:298:21)
      at parseMaybeAssign (../node_modules/@babel/parser/src/parser/expression.ts:252:12)
      at Parser.callback [as allowInAnd] (../node_modules/@babel/parser/src/parser/expression.ts:3117:12)
      at Parser.allowInAnd [as parseMaybeAssignAllowIn] (../node_modules/@babel/parser/src/parser/expression.ts:251:17)
      at Parser.parseMaybeAssignAllowIn [as parseExprListItem] (../node_modules/@babel/parser/src/parser/expression.ts:2720:18)
      at Parser.parseExprListItem [as parseCallExpressionArguments] (../node_modules/@babel/parser/src/parser/expression.ts:1010:14)
      at Parser.parseCallExpressionArguments [as parseCoverCallAndAsyncArrowHead] (../node_modules/@babel/parser/src/parser/expression.ts:888:29)
      at Parser.parseCoverCallAndAsyncArrowHead [as parseSubscript] (../node_modules/@babel/parser/src/parser/expression.ts:777:19)
      at Parser.parseSubscript [as parseSubscripts] (../node_modules/@babel/parser/src/parser/expression.ts:735:19)
      at Parser.parseSubscripts [as parseExprSubscripts] (../node_modules/@babel/parser/src/parser/expression.ts:720:17)
      at Parser.parseExprSubscripts [as parseUpdate] (../node_modules/@babel/parser/src/parser/expression.ts:693:21)
      at Parser.parseUpdate [as parseMaybeUnary] (../node_modules/@babel/parser/src/parser/expression.ts:655:23)
      at Parser.parseMaybeUnary [as parseMaybeUnaryOrPrivate] (../node_modules/@babel/parser/src/parser/expression.ts:389:14)
      at Parser.parseMaybeUnaryOrPrivate [as parseExprOps] (../node_modules/@babel/parser/src/parser/expression.ts:401:23)
      at Parser.parseExprOps [as parseMaybeConditional] (../node_modules/@babel/parser/src/parser/expression.ts:356:23)
      at Parser.parseMaybeConditional [as parseMaybeAssign] (../node_modules/@babel/parser/src/parser/expression.ts:298:21)
      at Parser.parseMaybeAssign [as parseExpressionBase] (../node_modules/@babel/parser/src/parser/expression.ts:221:23)
      at parseExpressionBase (../node_modules/@babel/parser/src/parser/expression.ts:212:39)
      at Parser.callback [as allowInAnd] (../node_modules/@babel/parser/src/parser/expression.ts:3112:16)
      at Parser.allowInAnd [as parseExpression] (../node_modules/@babel/parser/src/parser/expression.ts:212:17)
      at Parser.parseExpression [as parseStatementContent] (../node_modules/@babel/parser/src/parser/statement.ts:659:23)
      at Parser.parseStatementContent [as parseStatementLike] (../node_modules/@babel/parser/src/parser/statement.ts:437:17)
      at Parser.parseStatementLike [as parseModuleItem] (../node_modules/@babel/parser/src/parser/statement.ts:374:17)
      at Parser.parseModuleItem [as parseBlockOrModuleBlockBody] (../node_modules/@babel/parser/src/parser/statement.ts:1419:16)
      at Parser.parseBlockOrModuleBlockBody [as parseBlockBody] (../node_modules/@babel/parser/src/parser/statement.ts:1393:10)
      at Parser.parseBlockBody [as parseProgram] (../node_modules/@babel/parser/src/parser/statement.ts:225:10)
      at Parser.parseProgram [as parseTopLevel] (../node_modules/@babel/parser/src/parser/statement.ts:203:25)
      at Parser.parseTopLevel [as parse] (../node_modules/@babel/parser/src/parser/index.ts:90:10)
      at parse (../node_modules/@babel/parser/src/index.ts:66:38)
      at parser (../node_modules/@babel/core/src/parser/index.ts:28:19)
          at parser.next (<anonymous>)
      at normalizeFile (../node_modules/@babel/core/src/transformation/normalize-file.ts:50:24)
          at normalizeFile.next (<anonymous>)
      at run (../node_modules/@babel/core/src/transformation/index.ts:40:36)
          at run.next (<anonymous>)
      at transform (../node_modules/@babel/core/src/transform.ts:29:20)
          at transform.next (<anonymous>)
      at evaluateSync (../node_modules/gensync/index.js:251:28)
      at sync (../node_modules/gensync/index.js:89:14)
      at fn (../node_modules/@babel/core/src/errors/rewrite-stack-trace.ts:99:14)
      at transformSync (../node_modules/@babel/core/src/transform.ts:66:52)
      at ScriptTransformer.transformSource (../node_modules/@jest/transform/build/ScriptTransformer.js:545:31)
      at ScriptTransformer._transformAndBuildScript (../node_modules/@jest/transform/build/ScriptTransformer.js:674:40)
      at ScriptTransformer.transform (../node_modules/@jest/transform/build/ScriptTransformer.js:726:19)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.797 s
Ran all test suites